--- a/server/package.json
+++ b/server/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "my-app",
+  "name": "ocrus-server",
+  "version": "0.0.1",
   "scripts": {
     "dev": "bun run --hot src/index.ts"
   },
   "dependencies": {
     "@prisma/client": "^6.6.0",
     "better-auth": "^1.2.5",
+    "groq-sdk": "^0.22.0",
     "hono": "^4.7.6"
   },
   "devDependencies": {
