--- a/server/package.json
+++ b/server/package.json
@@ -5,13 +5,16 @@
     "dev": "bun run --hot src/index.ts"
   },
   "dependencies": {
-    "@prisma/client": "^6.6.0",
-    "better-auth": "^1.2.5",
+    "@better-auth/stripe": "^1.3.5",
+    "@prisma/client": "^6.13.0",
+    "@upstash/redis": "^1.35.3",
+    "better-auth": "^1.3.5",
     "groq-sdk": "^0.22.0",
-    "hono": "^4.7.6"
+    "hono": "^4.9.0",
+    "stripe": "^18.4.0"
   },
   "devDependencies": {
     "@types/bun": "latest",
-    "prisma": "^6.6.0"
+    "prisma": "^6.13.0"
   }
 }
